package Util;
public class Constantes {
    public static final int DURACION_JORNADA = 720;
}